# service-install

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: build_in_wizard.rs  cli.rs  cron_only.rs  cron_only_runas.rs  custom_wizard.rs  overwrite.rs  system.rs  user.rs  wizard.rs
src/: install.rs  lib.rs  schedule.rs  tui.rs  util.rs
src/install/: builder.rs  files.rs  init.rs  systemd.rs  user.rs
src/install/files/: id_process_parent.rs  process_parent.rs
src/install/init/: cron.rs  extract_path.rs  systemd.rs
src/install/init/cron/: disable.rs  setup.rs  teardown.rs
src/install/init/cron/teardown/: extract_path.rs
src/install/init/extract_path/: unshell_escape.rs  unsystemd_quote.rs
src/install/init/systemd/: api.rs  disable_existing.rs  setup.rs  teardown.rs  unit.rs
src/install/init/systemd/api/: manager.rs
src/tui/: install.rs  removal.rs
tests/: Dockerfile  buildah.sh  cli.dockerfile  install.rs  service-install-systemd-test.sh  setup_images.sh  systemd.sh  systemd_system.rs
trail-hamster/: Cargo.toml
trail-hamster/src/: buildah.rs  container.rs  lib.rs  podman.rs
trail-hamster/src/container/: fs.rs  process.rs
trail-hamster/src/container/fs/: path.rs  read_dir.rs
trail-hamster/tests/: ls.rs
